@@ -82,6 +82,7 @@ k/2$); or $R = [h]$ (for $c = k/2$, $w = 0$).
 \li{low-level constructor}
    {lfuncreate$([a,a^*,A,k,N,\var{eps},\var{poles}])$}
 \li{check functional equation (at $t$)}{lfuncheckfeq$(L,\{t\})$}
+\li{parameters $[N, k, A]$}{lfunparams$(L)$}
 
 \subsec{Linit constructors}
 \li{initialize for $L$}{lfuninit$(L, R, \{m = 0\})$}
